--- a/public/index.html
+++ b/public/index.html
@@ -521,7 +521,7 @@
                  </div> <!-- input group -->
               </div> <!-- form group -->
               <div class="form-group">
-                 <label for="task-description">Task description:</label>
+                 <label for="task-description">Task Description:</label>
                  <textarea readonly disabled class="form-control" id="task-description" rows="5">Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum. Donec id elit non mi porta gravida at eget metus. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Nullam id dolor id nibh ultricies vehicula ut id elit.
                  </textarea>
                </div> <!-- form group -->
@@ -531,17 +531,11 @@
                 <label for="task-quick-reschedule">Quick Reschedule:</label>
                 <div class="input-group">
                   <select class="form-control" id="task-quick-reschedule">
-                    <option>1</option>
-                    <option>2</option>
-                    <option>3</option>
-                    <option>4</option>
-                    <option>5</option>
+                    <option>2 days from now</option>
+                    <option>1 week from now</option>
+                    <option>2 weeks from now</option>
+                    <option>1 month from now</option>
                   </select>
-                  <div class="input-group-append">
-                    <div class="input-group-text">
-                       <i class="fas fa-calendar-alt"></i>
-                    </div>
-                  </div>
                 </div> <!-- input group -->
               </div> <!-- form group -->
               <div class="form-group flexed">
@@ -568,7 +562,10 @@
           <i class="fas fa-sync-alt"></i>
           Complete this task instead?
         </button>
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <a href="#0" class="btn btn-secondary">
+          <i class="fas fa-edit"></i>
+          Edit Task
+        </a>
         <button type="button" class="btn btn-primary">
           <i class="fas fa-history"></i>
           Reschedule Task
